<resources>
    <string name="app_update_lib_default_toast">Currently the latest version is already installed.</string>
    <string name="update_lib_network_not_available">The device was unable to establish an active internet connection.</string>

    <!--DownLoadDialog-->
    <string name="update_lib_download_cancel">Download canceled.</string>
    <string name="update_lib_download_in_background">Is updating in the background.</string>
    <string name="update_lib_download_finish">Download completed.</string>
    <string name="update_lib_download_failed">Download failed.</string>
    <string name="update_lib_file_download_format">Downloading（%1$s/%2$s）</string>

    <!--UpdateDialog-->
    <string name="update_lib_update_content">Release notes&#65306;</string>
    <string name="update_lib_version_code">Version no.&#65306;</string>
    <string name="update_lib_update">Update</string>
    <string name="update_lib_cancel">Cancel</string>
    <string name="update_lib_dialog_title">Update Available</string>

    <!--DownLoadService-->
    <string name="update_lib_file_download">Download file</string>
    <string name="update_lib_file_downloading">Downloading&#8230;</string>

    <!--fragment_download.xml-->
    <string name="update_lib_file_download_text">Downloading</string>
    <string name="update_lib_stop_download">Stop downloading</string>
    <string name="update_lib_background_download">Download in background</string>
</resources>
