<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_update_dialog"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_update_title"
            android:gravity="center_vertical|start"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/update_lib_file_download_text"
            android:textColor="#323232"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/app_update_fragment_download_pb"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:minHeight="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/app_update_fragment_stop_download_btn"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/bg_update_btn"
                android:gravity="center"
                android:minHeight="36dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/update_lib_stop_download"
                android:textColor="#696969"
                android:textSize="18sp" />

            <Button
                android:id="@+id/app_update_fragment_background_download_btn"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/bg_update_btn"
                android:gravity="center"
                android:minHeight="36dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/update_lib_background_download"
                android:textColor="#696969"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>