<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_update_dialog"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 标题 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_update_title"
            android:gravity="center"
            android:text="@string/update_lib_dialog_title"
            android:textColor="#323232"
            android:textSize="20sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/app_update_fragment_content_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="8"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="#696969"
                android:textSize="16sp" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/app_update_fragment_cancel_btn"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_update_btn"
                android:gravity="center"
                android:minHeight="36dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/update_lib_cancel"
                android:textColor="#696969"
                android:textSize="18sp" />

            <Button
                android:id="@+id/app_update_fragment_update_btn"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_update_btn"
                android:gravity="center"
                android:minHeight="36dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/update_lib_update"
                android:textColor="#696969"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>